--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Hi</h1>
 	<h2>Beepers</h2>
-	<iframe src="./My First Page_files/embed.html" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS9w8JPnRY8EgYqyZTI3uSUVJ1PzVKYOMXHfQjBJnj5Q8strouYz3QXm1mAmtX0fcuY34lD6XpBaQNc/embed?start=true&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	<iframe scrolling="no" frameborder="no" clocktype="html5" style="overflow:hidden;border:0;margin:0;padding:0;width:256px;height:174px;" src="./My First Page_files/html5embed.html"></iframe>
 
 
