--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<h2>Beepers</h2>
 	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS9w8JPnRY8EgYqyZTI3uSUVJ1PzVKYOMXHfQjBJnj5Q8strouYz3QXm1mAmtX0fcuY34lD6XpBaQNc/embed?start=true&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	<iframe scrolling="no" frameborder="no" clocktype="html5" style="overflow:hidden;border:0;margin:0;padding:0;width:256px;height:174px;" src="./My First Page_files/html5embed.html"></iframe>
-
+	<a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/" data-label_1="NEW YORK" data-label_2="WEATHER" data-theme="original" >NEW YORK WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
 
 
 </body></html>
