--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS9w8JPnRY8EgYqyZTI3uSUVJ1PzVKYOMXHfQjBJnj5Q8strouYz3QXm1mAmtX0fcuY34lD6XpBaQNc/embed?start=true&loop=true&delayms=10000" frameborder="0" width="480" height="290" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS9w8JPnRY8EgYqyZTI3uSUVJ1PzVKYOMXHfQjBJnj5Q8strouYz3QXm1mAmtX0fcuY34lD6XpBaQNc/embed?start=true&loop=true&delayms=10000" frameborder="0" width="480" height="290" allowfullscreen="false" mozallowfullscreen="false" webkitallowfullscreen="false"></iframe>
 
 
 </body></html>
