--- a/index.html
+++ b/index.html
@@ -6,15 +6,8 @@
 </head>
 <body>
 	
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS9w8JPnRY8EgYqyZTI3uSUVJ1PzVKYOMXHfQjBJnj5Q8strouYz3QXm1mAmtX0fcuY34lD6XpBaQNc/embed?start=true&loop=true&delayms=10000" frameborder="0" width="960" height="580" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS9w8JPnRY8EgYqyZTI3uSUVJ1PzVKYOMXHfQjBJnj5Q8strouYz3QXm1mAmtX0fcuY34lD6XpBaQNc/embed?start=true&loop=true&delayms=10000" frameborder="0" width="960" height="580" allowfullscreen="false" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 
 </body></html>
